--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "react-speech-kit": "^3.0.1"
+    "react-speech-kit": "^3.0.1",
+    "speech-to-text": "^2.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
