--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
-    "speech-to-text": "^2.9.1"
+    "speech-to-text": "^2.9.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
