--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "react-speech-kit": "^3.0.1",
-    "speech-to-text": "^2.9.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
