--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,19 @@
-flask==3.0.0
-flask-cors==4.0.0
-google-generativeai==0.8.3
-python-dotenv==1.0.0
+# FastAPI Web Framework
+fastapi==0.95.2
+uvicorn[standard]==0.22.0
+python-multipart==0.0.6
+
+# Networking
 requests==2.31.0
+
+# Environment Management
+python-dotenv==1.0.0
+
+# Google Cloud APIs (optional - can work without these)
+google-cloud-speech==2.21.0
+google-cloud-texttospeech==2.14.1
+
+# Testing
+pytest==7.4.0
+httpx==0.24.1
+pytest-asyncio==0.22.0
