--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voice-chat-frontend",
+  "name": "fluent-flow-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
